# rwh-exercise

./: README.md
ch1/: no3.hs  no4.hs
ch10/: PNM.hs
ch13/: num.hs  passwd-al.hs
ch14/: Logger.hs  Random.hs
ch2/: ex2.hs
ch3/: ex1.1.hs  ex1.2.hs  ex2.1.hs  ex2.3.hs  ex2.4.hs  ex2.5.hs  ex2.6.hs  ex2.7.hs  ex2.8.hs  ex2.9.hs
ch4/: SplitLines.hs  ex.hs
ch5/: Main  PrettyJSON.hs  myJSON.cabal
ch5/myJSON/: LICENSE  myJSON.cabal
ch5/myJSON/app/: Main.hs
ch5/myJSON/src/: Prettify.hs  PutJSON.hs  SimpleJSON.hs
ch7/: tempfile.hs  toupper'.hs  toupper.hs
ch8/: Glob.hs  GlobRegex.hs  GlobRegexEither.hs  Useful.hs
ch9/: RecursiveContents.hs  SimpleFinder.hs
