Name: myJSON
Version: 1.0
Synopsis: JSON lib from <<Real World Haskell>>
Description: A simple pretty printing library that illustrates how to develop a Haskell library.
Cabal-Version: >= 1.2
library
    Exposed-Modules: Prettify
                     PrettyJSON
                     SimpleJSON
    Build-Depends:   base >= 2.0